biocomplexity/templates/stormshare-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stormshare-prod-deployment
  namespace: biocomplexity
  labels:
    app: stormshare-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stormshare-prod
  template:
    metadata:
      labels:
        app: stormshare-prod
    spec:
      containers:
      - name: stormshare-prod-container
        image: nginx
        ports:
        - containerPort: 80         
        resources:
          requests:
            memory: "2024Mi"
            cpu: "50m"
          limits:
            memory: "3024Mi"
            cpu: "100m"
